feat: add user account management (#11)
* feat: add user account management

* chore: fix spotlessapply formatting

* feat: update user

* test: add TestUserAccountService and improve TestUserAccountController
fix: resolve time conversion and enum mapping issues

- Add unit tests for UserAccountService
- Improve existing unit tests for UserAccountController
- Fix time format conversion between backend and database
- Correct enum indexing to ensure Postman input (status: 1, role: 1)
  correctly maps to database values

* feat:modify the unit test

* feat:finish the unit test and upgrade other code

* feat:apply spotless

* feat:remove password when getUser

---------

Co-authored-by: RRRRJR <645718296@qq.com>